# Software-Model-Visualizer

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
application/: CMakeLists.txt  main.c
application/inc/: appWindow.h  graphicsMath.h  model.h  rasterizer.h  rendering.h  timeQuery.h  window.h
application/src/: main.c  model.c  rasterizer.c  rendering.c  timeQuery.c  window.c
application/src/linux/: appWindow.c  timeQuery.c
application/src/windows/: appWindow.c  timeQuery.c
application/test/: graphicsMath.c  graphicsMath2.c
cmake/: global_settings.cmake
rasterizer/: CMakeLists.txt
rasterizer/src/: rasterizer.c
testFramework/: CMakeLists.txt
testFramework/cmake/: generateTestCaseRegistry.cmake  testFramework.cmake
testFramework/inc/: ansiColors.h  testFramework.h
testFramework/src/: main.c
