set(LIBRARY_NAME rasterizer)

file(GLOB_RECURSE SOURCE_FILES
        "src/*.c")
file(GLOB_RECURSE HEADER_FILES
        "inc/*.h")

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCE_FILES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${HEADER_FILES})

add_library(${LIBRARY_NAME} STATIC ${SOURCE_FILES})
target_include_directories(${LIBRARY_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/inc)
